Adicionadas aulas 47 e 48. Correção no comando clickAlert.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "cypress": "^3.6.0"
-  },
   "dependencies": {
+    "cypress": "^3.6.0",
     "cypress-xpath": "^2.0.1"
   }
 }
